--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -101,7 +101,7 @@
  <HintPath>E:/Program Files/Unity 5.6.1f1/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
  </Reference>
  <Reference Include="XInputDotNetPure">
- <HintPath>C:/Users/Gacsam/Desktop/Dead Fast/Assets/Code/XInputDotNet/Plugins/XInputDotNetPure.dll</HintPath>
+ <HintPath>F:/Dead Fast/Assets/Code/XInputDotNet/Plugins/XInputDotNetPure.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>E:/Program Files/Unity 5.6.1f1/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
